DesignProject/tests/error/test02.src
// Error Test 2: Syntax error - unmatched braces
class MyClass {
    public attribute x : integer;
    public func getX() -> integer {
        return(x);
    }
// Missing closing brace

